# ShannonBase

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile-ignored  Doxyfile.in  LICENSE  MYSQL_VERSION  README  README.md  config.h.cmake  configure.cmake
.github/: PULL_REQUEST_TEMPLATE.md  workflows.md
Docs/: sp-imp-spec.txt
client/: CMakeLists.txt  client_query_attributes.cc  client_query_attributes.h  json_binlog_main.cc  json_client_library_main.cc  logger.cc  multi_factor_passwordopt-vars.cc  multi_option.cc  multi_option.h  mysql.cc  mysql_config_editor.cc  mysql_secure_installation.cc  mysqladmin.cc  mysqlbinlog.cc  mysqldump.cc  mysqlimport.cc  mysqlshow.cc  mysqlslap.cc  mysqltest.cc  pattern_matcher.cc  pattern_matcher.h  readline.cc
cmake/: FindONNXRuntime.cmake  abi_check.cmake  boost.cmake  compile_flags.cmake  component.cmake  curl.cmake  do_abi_check.cmake  fastcov.cmake  fido2.cmake  fprofile.cmake  googletest.cmake  info_macros.cmake.in  install_macros.cmake  jemalloc_wrapper.cmake  kerberos.cmake  libbacktrace.cmake  libcno.cmake  libs_mysql_create_library.cmake  libutils.cmake  maintainer.cmake  malloc_utils.cmake  maven.cmake  msvc_cppcheck.cmake  mysql_add_executable.cmake  mysql_version.cmake  package_name.cmake  plugin.cmake  protobuf.cmake  protobuf_proto_compile.cmake  readline.cmake  rpath_remove_plugin.cmake.in  rpc.cmake  sasl.cmake  ssl.cmake  versioninfo.rc.in
extra/jemalloc/: CMakeLists.txt
extra/tokenizer-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
extra/tokenizer-ffi/include/: tokenizer_ffi.h
extra/tokenizer-ffi/src/: lib.rs
include/: base64.h  big_endian.h  crypt_genhash_impl.h  decimal.h  dh_ecdh_config.h  dig_vec.h  field_types.h  ft_global.h  integer_digits.h  jemalloc_win.h  lf.h  m_string.h  manifest.h  map_helpers.h  mem_root_deque.h  my_alloc.h  my_base.h  my_byteorder.h  my_char_traits.h  my_compare.h  my_compiler.h  my_dbug.h  my_default.h  my_double2ulonglong.h  my_md5.h  my_psi_config.h  my_rapidjson_size_t.h  my_rnd.h  my_sharedlib.h  my_sqlcommand.h  my_sys.h  my_thread.h  my_tree.h  my_xml.h  myisam.h  myisampack.h  mysql.h.pp  mysql_server_suffix.h.in  mysql_version.h.in  mysqld_error.h  (+18 more)
storage/rapid_engine/: CMakeLists.txt  COPYING.shannon-data  ha_shannon_rapid.cc  ha_shannon_rapid.h  readme.txt
storage/rapid_engine/autopilot/: loader.cpp  loader.h
storage/rapid_engine/compress/: algorithms.cpp  algorithms.h
storage/rapid_engine/compress/dictionary/: dictionary.cpp  dictionary.h
storage/rapid_engine/compress/zlib/: zlib.cc
storage/rapid_engine/cost/: cost.cpp  cost.h
storage/rapid_engine/dpu/: readme.txt
storage/rapid_engine/executor/: executor.h
storage/rapid_engine/executor/iterators/: aggregate_iterator.cpp  aggregate_iterator.h  hash_join_iterator.cpp  hash_join_iterator.h  iterator.cpp  iterator.h  readme.md  table_scan_iterator.cpp  table_scan_iterator.h
storage/rapid_engine/extra/: readme.txt
storage/rapid_engine/handler/: ha_shannon_rapid.cc  ha_shannon_rapid.h  ha_shannon_rapidpart.cc  ha_shannon_rapidpart.h
storage/rapid_engine/imcs/: chunk.cpp  chunk.h  col0stats.cpp  col0stats.h  cu.cpp  cu.h  cu_recovery.cpp  cu_recovery.h  data_table.cpp  data_table.h  imcs.cpp  imcs.h  imcu.cpp  imcu.h  predicate.cpp  predicate.h  readme.txt  row0row.cpp  row0row.h  storage0index.cpp  storage0index.h  table.cpp  table.h  table0meta.h  table0view.cpp  table0view.h  varlen0data.cpp  varlen0data.h  worker.cpp  worker.h
storage/rapid_engine/imcs/index/: art.cpp  art.h  encoder.cpp  encoder.h  index.cpp  index.h  iterator.h
storage/rapid_engine/imcs/index/art/: art.cpp  art.h  iterator.h
storage/rapid_engine/imcs/iterators/: iterator.h
storage/rapid_engine/imcs/purge/: purge.cpp  purge.h  readme.txt
storage/rapid_engine/include/: rapid_arch_inf.h  rapid_arch_inf.h.in  rapid_column_info.h  rapid_config.h  rapid_const.h  rapid_context.h  rapid_loaded_table.h  rapid_object.h  rapid_stats.h  rapid_status.h  rapid_table_info.h  rapid_types.h
storage/rapid_engine/iterators/: hash_join_iterator.cpp  hash_join_iterator.h  iterator.cpp  iterator.h  table_scan_iterator.cpp  table_scan_iterator.h
storage/rapid_engine/ml/: ml.cpp  ml.h  query_arbitrator.cpp  query_arbitrator.h  readme.txt  sentence_transform.cpp  sentence_transform.h
storage/rapid_engine/ml/LightGBM/include/LightGBM/: application.h
storage/rapid_engine/monitor/: rapid_monitor.cpp  rapid_monitor.h
storage/rapid_engine/optimizer/: optimizer.cpp  optimizer.h  query_plan.cpp  query_plan.h  utils.cpp  utils.h  writable_access_path.h  writable_access_path.inc
storage/rapid_engine/optimizer/path/: access_path.cpp  access_path.h
storage/rapid_engine/optimizer/rules/: condition_pushdown.cpp  condition_pushdown.h  const_fold_rule.cpp  const_fold_rule.h  join_reorder.cpp  join_reorder.h  prune.cpp  prune.h  rule.h
storage/rapid_engine/persistence/: persistence.cpp  persistence.h
storage/rapid_engine/populate/: log_buffer.h  log_commons.h  log_copyinfo.cpp  log_copyinfo.h  log_parser.cpp  log_parser.h  log_populate.cpp  log_populate.h  log_reader.cpp  log_reader.h  log_redolog.cpp  log_redolog.h  populate.cpp  populate.h  purge.cpp  purge.h
storage/rapid_engine/reader/: csv_reader.cpp  csv_reader.h  imcs_reader.cpp  imcs_reader.h  parquet_reader.cpp  parquet_reader.h  reader.h
storage/rapid_engine/recovery/: load_persist.cpp  load_persist.h  recovery.cpp  recovery.h  recovery_load.cpp  recovery_load.h
storage/rapid_engine/resource_management/: res_mgmt.h
storage/rapid_engine/statistics/: statistics.cpp  statistics.h
storage/rapid_engine/trx/: readview.cpp  readview.h  transaction.cpp  transaction.h
storage/rapid_engine/utils/: SIMD.cpp  SIMD.h  SIMD_Impl.h  cache_line.cpp  cache_line_size_amd.cpp  cache_line_size_apple.cpp  cache_line_size_arm.cpp  cache_line_size_intel.cpp  concurrent.h  cpu.h  cpu_cache_size_amd.cpp  cpu_cache_size_apple.cpp  cpu_cache_size_arm.cpp  cpu_cache_size_intel.cpp  cpu_vector_instructor.cpp  crc.h  memory_pool.cpp  memory_pool.h  utils.cpp  utils.h
(+4388 files in other folders)
