[package]
name = "tokenizer-ffi"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "tokenizer_ffi"
crate-type = ["staticlib", "cdylib"]

[dependencies]
tokenizers = "0.19"  #the latest stable version
libc = "0.2"
once_cell = "1.18"
serde_json = "1.0"
minijinja = "1.0"  # for Jinja2 template.

[build-dependencies]
cbindgen = { version = "0.26.0", optional = true }

[features]
use-cbindgen-lib = ["cbindgen"]